--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </modules>
     <version>1.0-SNAPSHOT</version>
     <name>agentJ</name>
-    <description>agentJ: Java multi-agent development kit</description>
+    <description>agentJ: Java multi-agentic development kit</description>
     <url>https://www.agentscentral.ai</url>
 
 
