updated group id

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ai.agentscentral</groupId>
+    <groupId>ai.agentscentral.agentj</groupId>
     <artifactId>agentj</artifactId>
     <packaging>pom</packaging>
 
@@ -56,9 +56,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>ai.agentscentral</groupId>
+                <groupId>ai.agentscentral.agentj</groupId>
                 <artifactId>agentj-bom</artifactId>
-                <version>${project.version}</version>
+                <version>0.0.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
