--- a/agentj-bom/pom.xml
+++ b/agentj-bom/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ai.agentscentral.agentj</groupId>
+    <groupId>ai.agentscentral</groupId>
     <artifactId>agentj-bom</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
@@ -94,12 +94,12 @@
             </dependency>
 
             <dependency>
-                <groupId>ai.agentscentral.agentj</groupId>
+                <groupId>ai.agentscentral</groupId>
                 <artifactId>agentj-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>ai.agentscentral.agentj</groupId>
+                <groupId>ai.agentscentral</groupId>
                 <artifactId>agentj-http</artifactId>
                 <version>${project.version}</version>
             </dependency>
