--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ai.agentscentral</groupId>
@@ -42,10 +43,9 @@
 
     <scm>
         <connection>scm:git:git@github.com:AgentsCentral/agentJ.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:AgentsCentral/agentJ.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:AgentsCentral/agentJ.git</developerConnection>
         <url>https://github.com/AgentsCentral/agentJ.git</url>
-      <tag>v0.0.1</tag>
-  </scm>
+    </scm>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
