--- a/agentj-bom/pom.xml
+++ b/agentj-bom/pom.xml
@@ -22,7 +22,6 @@
     </properties>
 
     <dependencyManagement>
-        <!-- Jetty -->
         <dependencies>
             <dependency>
                 <groupId>org.eclipse.jetty.ee10</groupId>
@@ -112,5 +111,19 @@
 
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
