--- a/agentj-bom/pom.xml
+++ b/agentj-bom/pom.xml
@@ -5,7 +5,7 @@
     <groupId>ai.agentscentral</groupId>
     <artifactId>agentj-bom</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
