--- a/agentj-http/pom.xml
+++ b/agentj-http/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>ai.agentscentral</groupId>
         <artifactId>agentj</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>agentj-http</artifactId>
