--- a/agentj-bom/pom.xml
+++ b/agentj-bom/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>agentj-bom</artifactId>
     <packaging>pom</packaging>
     <version>0.0.3-SNAPSHOT</version>
+    <name>agentJ bill of materials</name>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
