--- a/agentj-bom/pom.xml
+++ b/agentj-bom/pom.xml
@@ -5,7 +5,7 @@
     <groupId>ai.agentscentral</groupId>
     <artifactId>agentj-bom</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>agentJ bill of materials</name>
 
     <properties>
