updated pom for release

--- a/agentj-bom/pom.xml
+++ b/agentj-bom/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>ai.agentscentral</groupId>
@@ -7,6 +8,36 @@
     <packaging>pom</packaging>
     <version>0.0.4-SNAPSHOT</version>
     <name>agentJ bill of materials</name>
+    <description>agentJ: Java Multi-Agent Development Kit</description>
+    <url>https://www.agentscentral.ai</url>
+
+
+    <developers>
+        <developer>
+            <name>Rizwan Idrees</name>
+            <email>rizwan@squadfour.com</email>
+            <roles>
+                <role>Founder</role>
+            </roles>
+            <organization>Agents Central</organization>
+            <organizationUrl>https://agentscentral.ai</organizationUrl>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git@github.com:AgentsCentral/agentJ.git</connection>
+        <developerConnection>scm:git:git@github.com:AgentsCentral/agentJ.git</developerConnection>
+        <url>https://github.com/AgentsCentral/agentJ</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -123,6 +154,20 @@
                 <configuration>
                     <publishingServerId>central</publishingServerId>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.2.8</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
