--- a/agentj-http/pom.xml
+++ b/agentj-http/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>agentj-http</artifactId>
-    <name>agentJ http</name>
+    <name>agentJ-http</name>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
