--- a/agentj-core/pom.xml
+++ b/agentj-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>ai.agentscentral</groupId>
         <artifactId>agentj</artifactId>
-        <version>0.0.5</version>
+        <version>0.0.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>agentj-core</artifactId>
