--- a/agentj-bom/pom.xml
+++ b/agentj-bom/pom.xml
@@ -5,7 +5,7 @@
     <groupId>ai.agentscentral</groupId>
     <artifactId>agentj-bom</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.6</version>
+    <version>0.0.7-SNAPSHOT</version>
     <name>agentJ bill of materials</name>
     <description>agentJ: Java Multi-Agent Development Kit</description>
     <url>https://www.agentscentral.ai</url>
@@ -35,7 +35,7 @@
         <connection>scm:git:git@github.com:AgentsCentral/agentJ.git</connection>
         <developerConnection>scm:git:git@github.com:AgentsCentral/agentJ.git</developerConnection>
         <url>https://github.com/AgentsCentral/agentJ</url>
-        <tag>v0.0.6</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
