--- a/agentj-bom/pom.xml
+++ b/agentj-bom/pom.xml
@@ -42,18 +42,77 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
+        <!-- Application Dependencies -->
         <jetty-ee.version>12.0.20</jetty-ee.version>
         <jakarta.servlet-api.version>6.1.0</jakarta.servlet-api.version>
         <jackson.version>2.19.0</jackson.version>
         <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
         <httpclient5.version>5.4.4</httpclient5.version>
         <commons-lang3.version>3.18.0</commons-lang3.version>
-        <junit-jupiter.version>5.12.2</junit-jupiter.version>
         <slf4j-api.version>2.0.17</slf4j-api.version>
+        <mongodb-driver.version>5.6.0</mongodb-driver.version>
+        
+        <!-- Test Dependencies -->
+        <junit-jupiter.version>5.10.2</junit-jupiter.version>
+        <testcontainers.version>1.21.3</testcontainers.version>
+        <mockito-junit-jupiter.version>5.11.0</mockito-junit-jupiter.version>
+        <assertj-core.version>3.25.3</assertj-core.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!-- Test Dependencies -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>mongodb</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${mockito-junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj-core.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- Application Dependencies -->
             <dependency>
                 <groupId>org.eclipse.jetty.ee10</groupId>
                 <artifactId>jetty-ee10-servlet</artifactId>
@@ -130,6 +189,15 @@
                 <groupId>ai.agentscentral</groupId>
                 <artifactId>agentj-http</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <!-- MongoDB -->
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver-bom</artifactId>
+                <version>${mongodb-driver.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!-- test -->
