--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>agentj-openai</module>
         <module>agentj-http</module>
         <module>agentj-anthropic</module>
+        <module>agentj-mongodb</module>
     </modules>
     <version>0.0.6-SNAPSHOT</version>
     <name>agentJ</name>
@@ -51,8 +52,13 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
-        <junit-jupiter-engine.version>5.12.2</junit-jupiter-engine.version>
+        
+        <!-- Test Dependencies -->
+        <junit-jupiter.version>5.8.1</junit-jupiter.version>
+        <testcontainers.version>1.21.3</testcontainers.version>
+        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
+        
+        <!-- Plugins -->
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
     </properties>
@@ -76,13 +82,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit-jupiter-engine.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
