--- a/agentj-mongodb/pom.xml
+++ b/agentj-mongodb/pom.xml
@@ -18,16 +18,31 @@
     </properties>
 
     <dependencies>
+        <!-- agentj-core dependency for context interfaces -->
         <dependency>
             <groupId>ai.agentscentral</groupId>
             <artifactId>agentj-core</artifactId>
         </dependency>
+        <!-- MongoDB Sync Driver -->
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
         </dependency>
+        <!-- Test Dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- Test Container for MongoDB -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-mongodb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- Testontainers JUnit Jupiter integration -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
