adding messaging support

--- a/agentj-messaging/pom.xml
+++ b/agentj-messaging/pom.xml
@@ -17,4 +17,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>ai.agentscentral</groupId>
+            <artifactId>agentj-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
